--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,9 +17,11 @@
   <script src='swagger-ui.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script type="text/javascript">
+
     $(function () {
+      var docLocation = window.location.origin + "/swagger-springmvc-demo/api-docs";
       window.swaggerUi = new SwaggerUi({
-      url: "http://127.0.0.1:8080/swagger-springmvc-demo/api-docs",
+      url:docLocation,
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
