--- a/spring3-testsuite/src/main/webapp/index.html
+++ b/spring3-testsuite/src/main/webapp/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Swagger UI</title>
-  <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
-  <link href='css/highlight.default.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
+  <link href='css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
   <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
   <script type="text/javascript" src="lib/shred.bundle.js"></script>
   <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
@@ -16,50 +16,55 @@
   <script src='lib/swagger.js' type='text/javascript'></script>
   <script src='swagger-ui.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
+
+  <!-- enabling this will enable oauth2 implicit scope support -->
   <script src='lib/swagger-oauth.js' type='text/javascript'></script>
 
   <script type="text/javascript">
-    var clientId = "your-client-id";
-    var realm = "your-realm";
-
-    $(function() {
-      var docLocation = window.location.origin + "/spring3-testsuite/api-docs?group=business-api";
+    $(function () {
       window.swaggerUi = new SwaggerUi({
-            url: docLocation,
-            dom_id: "swagger-ui-container",
-            onComplete: function(swaggerApi, swaggerUi) {
-              if (typeof initOAuth == "function")
-                initOAuth();
-            },
-            onFailure: function(data) {
-              if (console) {
-                console.log("Unable to Load SwaggerUI");
-              }
-            },
-            docExpansion: "none"
-          }
-      );
+      url: window.location.origin +"/spring3-testsuite/api-docs?group=business-api",
+      dom_id: "swagger-ui-container",
+      supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
+      onComplete: function(swaggerApi, swaggerUi){
+        log("Loaded SwaggerUI");
 
-      $('#input_apiKey').change(function() {
-        var key = $('#input_apiKey')[0].value;
-        console.log("key: " + key);
-        if (key && key.trim() != "") {
-          console.log("added key " + key);
-          window.authorizations.add("key", new ApiKeyAuthorization("api_key", key, "query"));
+        if(typeof initOAuth == "function") {
+          
+          initOAuth({
+            clientId: "your-client-id",
+            realm: "your-realms",
+            appName: "your-app-name"
+          });
+          
         }
-      })
-      window.swaggerUi.load();
+        $('pre code').each(function(i, e) {
+          hljs.highlightBlock(e)
+        });
+      },
+      onFailure: function(data) {
+        log("Unable to Load SwaggerUI");
+      },
+      docExpansion: "none"
     });
+
+    $('#input_apiKey').change(function() {
+      var key = $('#input_apiKey')[0].value;
+      log("key: " + key);
+      if(key && key.trim() != "") {
+        log("added key " + key);
+        window.authorizations.add("key", new ApiKeyAuthorization("api_key", key, "query"));
+      }
+    })
+    window.swaggerUi.load();
+  });
   </script>
-
-
 </head>
 
-<body>
+<body class="swagger-section">
 <div id='header'>
   <div class="swagger-ui-wrap">
     <a id="logo" href="http://swagger.wordnik.com">swagger</a>
-
     <form id='api_selector'>
       <div class='input icon-btn'>
         <img id="show-pet-store-icon" src="images/pet_store_api.png" title="Show Swagger Petstore Example Apis">
@@ -74,14 +79,7 @@
   </div>
 </div>
 
-<div id="message-bar" class="swagger-ui-wrap">
-  &nbsp;
-</div>
-
-<div id="swagger-ui-container" class="swagger-ui-wrap">
-
-</div>
-
+<div id="message-bar" class="swagger-ui-wrap">&nbsp;</div>
+<div id="swagger-ui-container" class="swagger-ui-wrap"></div>
 </body>
-
 </html>
